* Change get_next_sem_info() to be index based, not ID based - the semaphore IDs   aren't monotonically increasing which this code was assuming. This fixes bug   #4917.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34074 a95241bf-73f2-0310-859d-f6bbb57e9c96